--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "fakerphp/faker": "^1.5",
         "fzaninotto/faker": "^1.5",
         "guzzlehttp/guzzle": "^7.9",
         "kavenegar/php": "^1.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "ybazli/faker": "^1.0"
     },
     "require-dev": {
         "laravel/pint": "^1.13",
